[workspace]
resolver = "2"
members = ["fat_fs_types"]

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
redundant_lifetimes = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.rustdoc]
unescaped_backticks = "warn"
