[package]
name = "fat_fs_types"
version = "0.2.1"
edition = "2021"
rust-version = "1.73.0"
description = "low-level access to FAT12/16/32 and exFAT file systems"
repository = "https://github.com/kadiwa4/fat_fs"
license = "MIT"
categories = ["embedded", "filesystem", "no-std::no-alloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
bitflags = "2.4.2"
bytemuck = { version = "1.14.0", features = ["min_const_generics", "derive"], optional = true }
zerocopy = { version = "0.7.31", default-features = false, features = ["derive"], optional = true }

[features]
alloc = []
std = ["alloc"]

[lib]
path = "lib.rs"

[lints]
workspace = true
